--- a/AnastasiaModule/view/frontend/templates/form.phtml
+++ b/AnastasiaModule/view/frontend/templates/form.phtml
@@ -1,25 +1,16 @@
 <?php
 /** @var Amasty\AnastasiaModule\Block\Form $block */
-/** @var string $cssFormClass */
-/** @var string $cssInputClass */
-/** @var string $cssSubmitClass */
-/** @var string $cssTextClass */
-
-$cssFormClass = $block->hasCssFormClass() ? ' ' . $block->getCssFormClass() : '';
-$cssInputClass = $block->hasCssInputClass() ? ' ' . $block->getCssInputClass() : '';
-$cssSubmitClass = $block->hasCssSubmitClass() ? ' ' . $block->getCssSubmitClass() : '';
-$cssTextClass = $block->hasCssTextClass() ? ' ' . $block->getCssTextClass() : '';
 ?>
 
-<form class="<?= $cssFormClass ?>">
+<form>
     <label>
-        <input type="text" name="sku" class="<?= $cssInputClass ?>"/>
+        <input type="text" name="sku"/>
     </label>
     <label>
-        <input type="number" name="qty" class="<?= $cssInputClass ?>"/>
+        <input type="number" name="qty" />
     </label>
-    <div class="<?= $cssTextClass ?>"><?= $block->getChildHtml(); ?></div>
-    <input type="submit" value="Отправить" class="<?= $cssSubmitClass ?>"/>
+    <div><?= $block->getChildHtml(); ?></div>
+    <input type="submit" value="Отправить" />
 </form>
 
 
