--- a/AnastasiaModule/view/frontend/templates/hello.phtml
+++ b/AnastasiaModule/view/frontend/templates/hello.phtml
@@ -1,3 +1,9 @@
+<?php
+/** @var Amasty\AnastasiaModule\Block\Greeting $block */
+?>
 <div>
     Hello, World!
 </div>
+<p>
+    <?= $block->sayGreetingFromConfig() ?>
+</p>
