--- a/AnastasiaModule/view/frontend/templates/form.phtml
+++ b/AnastasiaModule/view/frontend/templates/form.phtml
@@ -14,13 +14,13 @@ $cssTextClass = $block->hasCssTextClass() ? ' ' . $block->getCssTextClass() : ''
 <form name="form_checkout" id="formCheckout" class="<?= $cssFormClass ?>" action="<?php echo $this->getUrl() . 'anastasia/cart/add'; ?>" method="post">
     <label>
         Enter SKU:
-        <input type="text" name="sku" class="<?= $cssInputClass ?>"/>
+        <input type="text" name="sku" class="<?= $cssInputClass ?>" class="required-entry"/>
     </label>
 
     <?php if ($block->isEnabledQty()) { ?>
         <label>
             Enter QTY:
-            <input type="number" name="qty" class="<?= $cssInputClass ?>" value="<?= $block->getDefaultQty(); ?>"/>
+            <input type="number" name="qty" class="<?= $cssInputClass ?>" value="<?= $block->getDefaultQty(); ?>" class="required-entry validate-greater-than-zero"/>
         </label>
     <?php } ?>
 
