--- a/AnastasiaModule/view/frontend/templates/form.phtml
+++ b/AnastasiaModule/view/frontend/templates/form.phtml
@@ -12,7 +12,9 @@ $cssTextClass = $block->hasCssTextClass() ? ' ' . $block->getCssTextClass() : ''
 ?>
 
 <form name="form_checkout" id="formCheckout" class="<?= $cssFormClass ?>"
-      action="<?php echo $this->getUrl() . 'anastasia/cart/add'; ?>" method="post" data-mage-init='{"validation": {}}'>
+      action="<?= $block->escapeUrl($block->getUrl('*/cart/add')) ?>"
+      method="post"
+      data-mage-init='{"validation": {}}'>
     <fieldset class="fieldset">
         <div class="field name required">
             <label for="sku">Enter SKU:</label>
