--- a/AnastasiaModule/view/frontend/web/css/main.css
+++ b/AnastasiaModule/view/frontend/web/css/main.css
@@ -50,3 +50,12 @@
     width: 300px;
 }
 
+#timer {
+    text-align: center;
+    font-weight: bold;
+}
+
+#timer-text {
+    padding-bottom: 10px;
+}
+
