--- a/AnastasiaModule/view/frontend/templates/form.phtml
+++ b/AnastasiaModule/view/frontend/templates/form.phtml
@@ -12,7 +12,7 @@ $cssTextClass = $block->hasCssTextClass() ? ' ' . $block->getCssTextClass() : ''
 ?>
 
 <form name="form_checkout" id="formCheckout" class="<?= $cssFormClass ?>"
-      action="<?= $block->escapeUrl($block->getUrl('*/cart/add')) ?>"
+      action="<?= $block->escapeUrl($block->getUrl($block->getFormAction())) ?>"
       method="post"
       data-mage-init='{"validation": {}}'>
     <fieldset class="fieldset">
