--- a/AnastasiaModule/view/frontend/web/template/koAutocomplete.html
+++ b/AnastasiaModule/view/frontend/web/template/koAutocomplete.html
@@ -1,7 +1,7 @@
 <input type="text" name="sku" class="required-entry" data-bind="textInput: searchText" autocomplete="off"/>
 <div class="cool-autocomplete-list">
     <ul class="css-ul-autocomplete" data-bind="foreach: searchResult, visible:isFocused">
-        <li class="css-li-autocomplete">
+        <li class="css-li-autocomplete" data-bind="click: $parent.processAutocomplete.bind($parent)">
             <span data-bind="text: sku"></span>
             <span data-bind="text: name"></span>
         </li>
