--- a/AnastasiaModule/view/frontend/templates/email/blacklist.phtml
+++ b/AnastasiaModule/view/frontend/templates/email/blacklist.phtml
@@ -9,7 +9,7 @@
     <tbody>
     <tr>
         <td><?= $block->getBlacklist()->getSku() ?></td>
-        <td><?= $block->getBlacklist()->getQty() ?></td>
+        <td>- <?= $block->getBlacklist()->getQty() ?></td>
     </tr>
     </tbody>
 </table>
